--- a/SGPROLANGUAGES.az/HTML/about-us.html
+++ b/SGPROLANGUAGES.az/HTML/about-us.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About Us - SGPRO</title>
     <link rel="stylesheet" href="../global css/reset.css" />
     <link rel="stylesheet" href="../global css/config.css" />
     <link rel="stylesheet" href="../global css/global.css" />
@@ -13,13 +13,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    />
   </head>
   <body>
-    <!-- HEADER SECTION  -->
     <!-- HEADER SECTION  -->
     <nav class="navbar">
       <h1>SGPRO</h1>
@@ -32,14 +27,23 @@
 
       <div class="nav-right">
         <ul class="nav-links" id="navLinks">
-          <li><a href="#home" data-i18n="nav_home">Home</a></li>
-          <li><a href="#contact" data-i18n="nav_contact">Contact</a></li>
           <li>
-            <a href="#about" class="active" data-i18n="nav_about">About Us</a>
+            <a href="home.html" data-i18n="nav_home">Home</a>
+          </li>
+          <li>
+            <a href="contact.html" data-i18n="nav_contact">Contact</a>
+          </li>
+          <li>
+            <a href="about-us.html" class="active" data-i18n="nav_about">
+              About Us
+            </a>
+          </li>
+          <li>
+            <a href="portfolio.html" data-i18n="nav_portfolio">Portfolio</a>
           </li>
         </ul>
 
-        <!-- YENİ DİL DROPDOWN BURADADIR -->
+        <!-- LANGUAGE DROPDOWN -->
         <div class="language-switcher">
           <button class="lang-toggle" id="langToggle">
             <span id="currentLangLabel">EN</span>
@@ -55,7 +59,6 @@
       </div>
     </nav>
 
-    <!-- Main Content -->
     <!-- ABOUT HERO SECTION -->
     <section class="about-hero">
       <div class="about-hero__overlay">
@@ -63,40 +66,132 @@
           <h1 data-i18n="about_title">About Us</h1>
           <p data-i18n="about_subtitle">What's behind The Agency?</p>
 
-          <a
-            href="#about-details"
-            class="about-hero__btn"
-            data-i18n="read_about_btn"
-          >
+          <a href="#about-details" class="about-hero__btn">
             <i class="fa-solid fa-align-left"></i>
-            <span>READ ABOUT US</span>
+            <span data-i18n="read_about_btn">READ ABOUT US</span>
           </a>
         </div>
       </div>
     </section>
 
-    <section id="about-details" class="about-details">
-      <div class="agency-details">
-      <h1>We are The Agency</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda
-        minima similique perferendis pariatur recusandae, atque molestiae
-        eveniet, placeat dicta quisquam illo voluptas nisi magnam ex accusamus
-        temporibus possimus tempore eos?
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-        voluptatibus tempore atque magnam unde. Delectus ducimus amet officia
-        quo quis sit dicta, nemo voluptate itaque quas rerum, debitis quidem
-        iure!
-      </p>
-      <button class="agency-details-button">💼WHAT WE DO</button>
-      </div>
-    </section>
+   <div class="section">
+            <div class="story">
+                <div class="story-text">
+                    <h2>Our Story</h2>
+                    <p>Founded in 2015, our journey began with a simple vision: to create meaningful solutions that empower businesses and individuals to achieve their goals.</p>
+                    <p>What started as a small team of three has grown into a thriving company of passionate professionals, all united by our commitment to excellence and innovation.</p>
+                    <p>Today, we serve clients worldwide, helping them navigate the digital landscape and transform their ideas into reality.</p>
+                </div>
+                <div class="story-image">
+                    🚀
+                </div>
+            </div>
+        </div>
 
-    <!-- FOOTER -->
-    <!-- FOOTER -->
-    <!-- FOOTER -->
+        <div class="section mission-vision">
+            <div class="mv-grid">
+                <div class="mv-card">
+                    <h3>Our Mission</h3>
+                    <p>To empower businesses through innovative technology solutions that drive growth, efficiency, and success. We believe in creating tools that are not just functional, but transformative.</p>
+                </div>
+                <div class="mv-card">
+                    <h3>Our Vision</h3>
+                    <p>To be the leading force in digital innovation, recognized globally for our commitment to excellence, creativity, and positive impact on the businesses we serve.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="section values">
+            <h2>Our Values</h2>
+            <div class="values-grid">
+                <div class="value-item">
+                    <div class="value-icon">💡</div>
+                    <h3>Innovation</h3>
+                    <p>We constantly push boundaries and embrace new ideas to stay ahead of the curve.</p>
+                </div>
+                <div class="value-item">
+                    <div class="value-icon">🤝</div>
+                    <h3>Integrity</h3>
+                    <p>We build trust through honesty, transparency, and ethical practices in everything we do.</p>
+                </div>
+                <div class="value-item">
+                    <div class="value-icon">🎯</div>
+                    <h3>Excellence</h3>
+                    <p>We strive for the highest quality in our work and never settle for anything less.</p>
+                </div>
+                <div class="value-item">
+                    <div class="value-icon">🌟</div>
+                    <h3>Collaboration</h3>
+                    <p>We believe in the power of teamwork and value diverse perspectives.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="section team">
+            <div class="team-content">
+                <h2>Meet Our Team</h2>
+                <div class="team-grid">
+                    <div class="team-member">
+                        <div class="member-photo">JS</div>
+                        <h3>John Smith</h3>
+                        <div class="role">CEO & Founder</div>
+                        <p>Visionary leader with 15+ years of experience in tech industry.</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="member-photo">SJ</div>
+                        <h3>Sarah Johnson</h3>
+                        <div class="role">Creative Director</div>
+                        <p>Award-winning designer passionate about creating beautiful experiences.</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="member-photo">MB</div>
+                        <h3>Mike Brown</h3>
+                        <div class="role">Technical Lead</div>
+                        <p>Expert developer with a love for clean code and innovation.</p>
+                    </div>
+                    <div class="team-member">
+                        <div class="member-photo">ED</div>
+                        <h3>Emily Davis</h3>
+                        <div class="role">Marketing Director</div>
+                        <p>Strategic thinker dedicated to building meaningful brand connections.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section timeline">
+            <h2>Our Journey</h2>
+            <div class="timeline-item">
+                <div class="timeline-year">2015</div>
+                <div class="timeline-content">
+                    <h3>The Beginning</h3>
+                    <p>Started our company with a small team and big dreams in a garage office.</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-year">2017</div>
+                <div class="timeline-content">
+                    <h3>First Major Client</h3>
+                    <p>Landed our first Fortune 500 client, marking a major milestone in our growth.</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-year">2020</div>
+                <div class="timeline-content">
+                    <h3>Team Expansion</h3>
+                    <p>Grew to a team of 50+ professionals across multiple locations.</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-year">2023</div>
+                <div class="timeline-content">
+                    <h3>Global Recognition</h3>
+                    <p>Received international awards and expanded to serve clients worldwide.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- FOOTER -->
     <footer class="footer">
       <div class="footer-content">
@@ -113,17 +208,25 @@
             </p>
           </div>
           <nav class="footer-nav">
-            <a href="home.html" class="nav-link" data-i18n="footer_home"
-              >Home</a
+            <a href="home.html" class="nav-link" data-i18n="footer_home">
+              Home
+            </a>
+            <a
+              href="portfolio.html"
+              class="nav-link"
+              data-i18n="footer_portfolio"
             >
-            <a href="services.html" class="nav-link" data-i18n="footer_services"
-              >Services</a
+              Services
+            </a>
+            <a
+              href="about-us.html"
+              class="nav-link"
+              data-i18n="footer_about"
             >
-            <a href="about-us.html" class="nav-link" data-i18n="footer_about"
-              >About Us</a
-            >
-            <a href="contact.html" class="nav-link" data-i18n="footer_contact"
-              >Contact
+              About Us
+            </a>
+            <a href="contact.html" class="nav-link" data-i18n="footer_contact">
+              Contact
             </a>
           </nav>
         </div>
@@ -147,7 +250,7 @@
               </svg>
             </a>
             <a
-              href="https://www.instagram.com/sgpro.az/  "
+              href="https://www.instagram.com/sgpro.az/"
               class="social-link"
               aria-label="Instagram"
             >
@@ -168,8 +271,8 @@
         </div>
       </div>
     </footer>
+
     <script src="../SCRIPT/lang.js"></script>
-    <script src="../SCRIPT/global.js"></script>
     <script src="../SCRIPT/about-us.js"></script>
   </body>
 </html>
