--- a/SGPROLANGUAGES.az/HTML/contact.html
+++ b/SGPROLANGUAGES.az/HTML/contact.html
@@ -1,12 +1,13 @@
+<!-- CONTACT HTML -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact - SGPRO</title>
     <link rel="stylesheet" href="../global css/reset.css" />
     <link rel="stylesheet" href="../global css/config.css" />
-    <link rel="stylesheet" href="../global css/global.css   " />
+    <link rel="stylesheet" href="../global css/global.css" />
     <link rel="stylesheet" href="../STYLE/contact.css" />
     <link
       rel="stylesheet"
@@ -14,8 +15,7 @@
     />
   </head>
   <body>
-    <!-- HEADR SECTION  -->
-    <!-- HEADR SECTION  -->
+    <!-- HEADER SECTION  -->
     <nav class="navbar">
       <h1>SGPRO</h1>
 
@@ -27,14 +27,27 @@
 
       <div class="nav-right">
         <ul class="nav-links" id="navLinks">
-          <li><a href="#home" data-i18n="nav_home">Home</a></li>
-          <li><a href="#contact" data-i18n="nav_contact">Contact</a></li>
           <li>
-            <a href="#about" class="active" data-i18n="nav_about">About Us</a>
+            <a href="home.html" data-i18n="nav_home">Home</a>
+          </li>
+          <li>
+            <a
+              href="contact.html"
+              class="active"
+              data-i18n="nav_contact"
+            >
+              Contact
+            </a>
+          </li>
+          <li>
+            <a href="about-us.html" data-i18n="nav_about">About Us</a>
+          </li>
+          <li>
+            <a href="portfolio.html" data-i18n="nav_portfolio">Portfolio</a>
           </li>
         </ul>
 
-        <!-- YENİ DİL DROPDOWN BURADADIR -->
+        <!-- LANGUAGE DROPDOWN -->
         <div class="language-switcher">
           <button class="lang-toggle" id="langToggle">
             <span id="currentLangLabel">EN</span>
@@ -64,19 +77,27 @@
           <div class="form-group">
             <label for="name" data-i18n="form_name_label">Full Name *</label>
             <input type="text" id="name" name="name" required />
-            <span class="error-message" id="nameError" data-i18n="error_name"
-              >Please enter your name</span
+            <span
+              class="error-message"
+              id="nameError"
+              data-i18n="error_name"
             >
+              Please enter your name
+            </span>
           </div>
 
           <div class="form-group">
-            <label for="email" data-i18n="form_email_label"
-              >Email Address *</label
-            >
+            <label for="email" data-i18n="form_email_label">
+              Email Address *
+            </label>
             <input type="email" id="email" name="email" required />
-            <span class="error-message" id="emailError" data-i18n="error_email"
-              >Please enter a valid email</span
+            <span
+              class="error-message"
+              id="emailError"
+              data-i18n="error_email"
             >
+              Please enter a valid email
+            </span>
           </div>
 
           <div class="form-group">
@@ -85,32 +106,38 @@
           </div>
 
           <div class="form-group">
-            <label for="subject" data-i18n="form_subject_label"
-              >Subject *</label
-            >
+            <label for="subject" data-i18n="form_subject_label">
+              Subject *
+            </label>
             <input type="text" id="subject" name="subject" required />
             <span
               class="error-message"
               id="subjectError"
               data-i18n="error_subject"
-              >Please enter a subject</span
             >
+              Please enter a subject
+            </span>
           </div>
 
           <div class="form-group">
-            <label for="message" data-i18n="form_message_label"
-              >Message *</label
-            >
+            <label for="message" data-i18n="form_message_label">
+              Message *
+            </label>
             <textarea id="message" name="message" required></textarea>
             <span
               class="error-message"
               id="messageError"
               data-i18n="error_message"
-              >Please enter your message</span
             >
+              Please enter your message
+            </span>
           </div>
 
-          <button type="submit" class="submit-btn" data-i18n="form_send_button">
+          <button
+            type="submit"
+            class="submit-btn"
+            data-i18n="form_send_button"
+          >
             Send Message
           </button>
 
@@ -124,6 +151,8 @@
         </form>
       </div>
     </div>
+
+    <!-- FOOTER -->
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-top">
@@ -139,17 +168,25 @@
             </p>
           </div>
           <nav class="footer-nav">
-            <a href="home.html" class="nav-link" data-i18n="footer_home"
-              >Home</a
+            <a href="home.html" class="nav-link" data-i18n="footer_home">
+              Home
+            </a>
+            <a
+              href="portfolio.html"
+              class="nav-link"
+              data-i18n="footer_portfolio"
             >
-            <a href="services.html" class="nav-link" data-i18n="footer_services"
-              >Services</a
+              Portfolio
+            </a>
+            <a
+              href="about-us.html"
+              class="nav-link"
+              data-i18n="footer_about"
             >
-            <a href="about-us.html" class="nav-link" data-i18n="footer_about"
-              >About Us</a
-            >
-            <a href="contact.html" class="nav-link" data-i18n="footer_contact"
-              >Contact
+              About Us
+            </a>
+            <a href="contact.html" class="nav-link" data-i18n="footer_contact">
+              Contact
             </a>
           </nav>
         </div>
@@ -173,7 +210,7 @@
               </svg>
             </a>
             <a
-              href="https://www.instagram.com/sgpro.az/  "
+              href="https://www.instagram.com/sgpro.az/"
               class="social-link"
               aria-label="Instagram"
             >
@@ -188,12 +225,13 @@
                 <path
                   d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
                 />
-              </svg>
+              </svg>        
             </a>
           </div>
         </div>
       </div>
     </footer>
+
     <script src="../SCRIPT/lang.js"></script>
     <script src="../SCRIPT/contact.js"></script>
   </body>
