--- a/SGPROLANGUAGES.az/HTML/home.html
+++ b/SGPROLANGUAGES.az/HTML/home.html
@@ -1,9 +1,10 @@
+<!-- HOME HTML -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home - SGPRO</title>
     <link rel="stylesheet" href="../global css/reset.css" />
     <link rel="stylesheet" href="../global css/config.css" />
     <link rel="stylesheet" href="../global css/global.css" />
@@ -14,8 +15,7 @@
     />
   </head>
   <body>
-    <!-- HEADR SECTION  -->
-    <!-- HEADR SECTION  -->
+    <!-- HEADER SECTION  -->
     <nav class="navbar">
       <h1>SGPRO</h1>
 
@@ -27,14 +27,21 @@
 
       <div class="nav-right">
         <ul class="nav-links" id="navLinks">
-          <li><a href="#home" data-i18n="nav_home">Home</a></li>
-          <li><a href="#contact" data-i18n="nav_contact">Contact</a></li>
           <li>
-            <a href="#about" class="active" data-i18n="nav_about">About Us</a>
+            <a href="home.html" class="active" data-i18n="nav_home">Home</a>
+          </li>
+          <li>
+            <a href="contact.html" data-i18n="nav_contact">Contact</a>
+          </li>
+          <li>
+            <a href="about-us.html" data-i18n="nav_about">About Us</a>
+          </li>
+          <li>
+            <a href="portfolio.html" data-i18n="nav_portfolio">Portfolio</a>
           </li>
         </ul>
 
-        <!-- YENİ DİL DROPDOWN BURADADIR -->
+        <!-- LANGUAGE DROPDOWN -->
         <div class="language-switcher">
           <button class="lang-toggle" id="langToggle">
             <span id="currentLangLabel">EN</span>
@@ -50,13 +57,8 @@
       </div>
     </nav>
 
-    <!-- MAIN -->
-    <!-- MAIN -->
-    <!-- MAIN -->
-    <!-- Main Content -->
-    <!-- Main Content -->
-    <!-- FOOTER -->
-    <!-- FOOTER -->
+    <!-- BURAYA SONRA HOME HERO / CONTENT QOŞA BİLƏRSƏN -->
+
     <!-- FOOTER -->
     <footer class="footer">
       <div class="footer-content">
@@ -73,17 +75,25 @@
             </p>
           </div>
           <nav class="footer-nav">
-            <a href="home.html" class="nav-link" data-i18n="footer_home"
-              >Home</a
+            <a href="home.html" class="nav-link" data-i18n="footer_home">
+              Home
+            </a>
+            <a
+              href="portfolio.html"
+              class="nav-link"
+              data-i18n="footer_portfolio"
             >
-            <a href="services.html" class="nav-link" data-i18n="footer_services"
-              >Services</a
+              Portfolio
+            </a>
+            <a
+              href="about-us.html"
+              class="nav-link"
+              data-i18n="footer_about"
             >
-            <a href="about-us.html" class="nav-link" data-i18n="footer_about"
-              >About Us</a
-            >
-            <a href="contact.html" class="nav-link" data-i18n="footer_contact"
-              >Contact
+              About Us
+            </a>
+            <a href="contact.html" class="nav-link" data-i18n="footer_contact">
+              Contact
             </a>
           </nav>
         </div>
@@ -107,7 +117,7 @@
               </svg>
             </a>
             <a
-              href="https://www.instagram.com/sgpro.az/  "
+              href="https://www.instagram.com/sgpro.az/"
               class="social-link"
               aria-label="Instagram"
             >
@@ -128,6 +138,7 @@
         </div>
       </div>
     </footer>
+
     <script src="../SCRIPT/lang.js"></script>
     <script src="../SCRIPT/global.js"></script>
     <script src="../SCRIPT/home.js"></script>
