--- a/SGPROLANGUAGES.az/HTML/portfolio.html
+++ b/SGPROLANGUAGES.az/HTML/portfolio.html
@@ -1,21 +1,22 @@
+<!-- PORTFOLIO HTML -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portfolio - SGPRO</title>
     <link rel="stylesheet" href="../global css/reset.css" />
     <link rel="stylesheet" href="../global css/config.css" />
     <link rel="stylesheet" href="../global css/global.css" />
     <link rel="stylesheet" href="../STYLE/home.css" />
+    <link rel="stylesheet" href="../STYLE/portfolio.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
   </head>
   <body>
-    <!-- HEADR SECTION  -->
-    <!-- HEADR SECTION  -->
+    <!-- HEADER SECTION  -->
     <nav class="navbar">
       <h1>SGPRO</h1>
 
@@ -27,14 +28,27 @@
 
       <div class="nav-right">
         <ul class="nav-links" id="navLinks">
-          <li><a href="#home" data-i18n="nav_home">Home</a></li>
-          <li><a href="#contact" data-i18n="nav_contact">Contact</a></li>
           <li>
-            <a href="#about" class="active" data-i18n="nav_about">About Us</a>
+            <a href="home.html" data-i18n="nav_home">Home</a>
+          </li>
+          <li>
+            <a href="contact.html" data-i18n="nav_contact">Contact</a>
+          </li>
+          <li>
+            <a href="about-us.html" data-i18n="nav_about">About Us</a>
+          </li>
+          <li>
+            <a
+              href="portfolio.html"
+              class="active"
+              data-i18n="nav_portfolio"
+            >
+              Portfolio
+            </a>
           </li>
         </ul>
 
-        <!-- YENİ DİL DROPDOWN BURADADIR -->
+        <!-- LANGUAGE DROPDOWN -->
         <div class="language-switcher">
           <button class="lang-toggle" id="langToggle">
             <span id="currentLangLabel">EN</span>
@@ -50,13 +64,145 @@
       </div>
     </nav>
 
-    <!-- MAIN -->
-    <!-- MAIN -->
-    <!-- MAIN -->
-    <!-- Main Content -->
-    <!-- Main Content -->
-    <!-- FOOTER -->
-    <!-- FOOTER -->
+    <!-- MAIN CONTENT -->
+    <div class="container">
+      <div class="hero">
+        <div class="hero-content">
+          <h1 data-i18n="hero_title">Creative Agency</h1>
+          <p data-i18n="hero_subtitle">
+            We Turn Ideas Into Amazing Campaigns
+          </p>
+          <a
+            href="./contact.html"
+            class="cta-button"
+            data-i18n="hero_button"
+          >
+            Let's Work Together
+          </a>
+        </div>
+      </div>
+
+      <div class="section services">
+        <h2>Our Services</h2>
+        <p class="section-subtitle">
+          We offer comprehensive advertising solutions to help your brand stand
+          out
+        </p>
+        <div class="services-grid">
+          <div class="service-card">
+            <div class="service-icon">🎨</div>
+            <h3>Brand Identity</h3>
+            <p>
+              Create memorable brand experiences that resonate with your
+              audience and stand the test of time.
+            </p>
+          </div>
+          <div class="service-card">
+            <div class="service-icon">📱</div>
+            <h3>Digital Marketing</h3>
+            <p>
+              Engage your customers across all digital channels with
+              data-driven campaigns that convert.
+            </p>
+          </div>
+          <div class="service-card">
+            <div class="service-icon">🎬</div>
+            <h3>Video Production</h3>
+            <p>
+              Tell your story through compelling video content that captures
+              attention and drives action.
+            </p>
+          </div>
+          <div class="service-card">
+            <div class="service-icon">📊</div>
+            <h3>Strategy</h3>
+            <p>
+              Develop winning marketing strategies backed by insights and
+              tailored to your business goals.
+            </p>
+          </div>
+          <div class="service-card">
+            <div class="service-icon">✍️</div>
+            <h3>Content Creation</h3>
+            <p>
+              Craft engaging content that connects with your audience and builds
+              lasting relationships.
+            </p>
+          </div>
+          <div class="service-card">
+            <div class="service-icon">📈</div>
+            <h3>Analytics</h3>
+            <p>
+              Measure what matters with comprehensive analytics and actionable
+              insights for growth.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="section portfolio">
+        <h2>Recent Work</h2>
+        <p class="section-subtitle">
+          Check out some of our latest projects and campaigns
+        </p>
+        <div class="portfolio-grid">
+          <div class="portfolio-item">
+            <img
+              src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=800&h=600&fit=crop"
+              alt="Project 1"
+            />
+            <div class="portfolio-overlay">
+              <h3>Tech Startup Launch</h3>
+              <p>Complete brand identity and digital campaign</p>
+            </div>
+          </div>
+          <div class="portfolio-item">
+            <img
+              src="https://images.unsplash.com/photo-1542744094-3a31f272c490?w=800&h=600&fit=crop"
+              alt="Project 2"
+            />
+            <div class="portfolio-overlay">
+              <h3>Fashion Brand Revival</h3>
+              <p>Social media strategy and content creation</p>
+            </div>
+          </div>
+          <div class="portfolio-item">
+            <img
+              src="https://images.unsplash.com/photo-1557838923-2985c318be48?w=800&h=600&fit=crop"
+              alt="Project 3"
+            />
+            <div class="portfolio-overlay">
+              <h3>Product Launch Campaign</h3>
+              <p>Multi-channel advertising campaign</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="section stats">
+        <h2 style="color: rgb(0, 0, 0)">Our Impact</h2>
+        <div class="stats-grid">
+          <div class="stat-item">
+            <h3>200+</h3>
+            <p>Happy Clients</p>
+          </div>
+          <div class="stat-item">
+            <h3>500+</h3>
+            <p>Projects Completed</p>
+          </div>
+          <div class="stat-item">
+            <h3>15+</h3>
+            <p>Awards Won</p>
+          </div>
+          <div class="stat-item">
+            <h3>10+</h3>
+            <p>Years Experience</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- container burada bağlandı -->
+
     <!-- FOOTER -->
     <footer class="footer">
       <div class="footer-content">
@@ -73,17 +219,25 @@
             </p>
           </div>
           <nav class="footer-nav">
-            <a href="home.html" class="nav-link" data-i18n="footer_home"
-              >Home</a
+            <a href="home.html" class="nav-link" data-i18n="footer_home">
+              Home
+            </a>
+            <a
+              href="portfolio.html"
+              class="nav-link"
+              data-i18n="footer_portfolio"
             >
-            <a href="services.html" class="nav-link" data-i18n="footer_services"
-              >Services</a
+              Portfolio
+            </a>
+            <a
+              href="about-us.html"
+              class="nav-link"
+              data-i18n="footer_about"
             >
-            <a href="about-us.html" class="nav-link" data-i18n="footer_about"
-              >About Us</a
-            >
-            <a href="contact.html" class="nav-link" data-i18n="footer_contact"
-              >Contact
+              About Us
+            </a>
+            <a href="contact.html" class="nav-link" data-i18n="footer_contact">
+              Contact
             </a>
           </nav>
         </div>
@@ -107,7 +261,7 @@
               </svg>
             </a>
             <a
-              href="https://www.instagram.com/sgpro.az/  "
+              href="https://www.instagram.com/sgpro.az/"
               class="social-link"
               aria-label="Instagram"
             >
@@ -128,8 +282,9 @@
         </div>
       </div>
     </footer>
+
     <script src="../SCRIPT/lang.js"></script>
-    <script src="../SCRIPT/global.js"></script>
+    <script src="../SCRIPT/portfolio.js"></script>
     <script src="../SCRIPT/home.js"></script>
   </body>
 </html>
